# psychiatrist-bot

./: README.md
backend/: main.py  pyproject.toml
backend/api/v1/: endpoints.py
backend/db/: models.py  repository.py
backend/llm/: base.py  gemini_llm.py  openai_llm.py  strategy.py
backend/services/: session_service.py  speech.py
frontend/: app.js  index.html  style.css
